<resources>
    <string name="app_name">YodaQA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="answer_title">Answers</string>
    <string name="sources_title">Sources</string>
    <string name="enter_something">Enter something</string>
    <string name="no_response">No response</string>
    <string name="settings">Settings</string>
    <string name="domain">Domain</string>
    <string name="pref_endpoint_default">Live</string>

    <string name="crash_dialog_title">YodaQA has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

    <string name="pref_enable_acra">Send reports</string>
    <string name="pref_acra_enabled">Check to allow send reports in order to help us improve YodaQA</string>
    <string name="pref_acra_user_email">Contact email</string>
    <string name="pref_acra_user_email_summary">We may contact you to obtain more information about errors</string>
    <string name="pref_acra_alwaysaccept">Auto-send reports</string>
    <string name="pref_acra_alwaysaccept_enabled">Check to auto-send reports on crash events</string>
    <string name="report_error">Report error</string>
    <string name="describe_problem">Describe problem:</string>
    <string name="describe_problem_prefill" />
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="thank_you_feedback">Thank you !</string>
    <string name="acra_settings_title">Error reporting</string>
    <string name="yoda_settings">General</string>
</resources>
